fix max age
Signed-off-by: Oleksii Moskalenko <moskalenko.alexey@gmail.com>